--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-# MONGO_URI="mongodb+srv://khush:khush%40work@milnenium.uw7zk.mongodb.net/datamil?retryWrites=true&w=majority&appName=milnenium";
-
-# PORT=5000
+MONGO_URI="mongodb+srv://oshan:oshan%40work1234@cluster0.2txxi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
