--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "user-attendance-backend",
+  "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "concurrently \"node collection.js\" \"node expenses.js\" \"node sales.js\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "mongoose": "^8.19.1",
-    "multer": "^2.0.2",
     "node-cache": "^5.1.2"
-  },
-  "devDependencies": {
-    "concurrently": "^9.2.1"
   }
 }
