--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "backend",
+  "name": "user-attendance-backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.9",
-    "body-parser": "^1.20.3",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2"
   }
 }
